fixed spacing between components

--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,9 @@ body {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    padding-top: 15%;
+    padding-top: 20%;
     padding-left: 15%;
-    min-height: 100vh;
+    min-height: 70vh;
 }
 
 .header-bio {
@@ -68,6 +68,7 @@ body {
     padding-left: 15%;
     padding-right: 25%;
     min-height: 60vh;
+    /* margin-top: -20%;  */
 }
 
 .about-title {
@@ -115,6 +116,7 @@ body {
 
 .skills li:hover{
     transform: translateY(-5px);
+    color: #F5F1ED;
 }
 
 .profile-img {
